--- a/ProyectoCiclo3.App.Frontend/Pages/Usuario/List.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Usuario/List.cshtml
@@ -6,16 +6,16 @@
 <table class="table table-hover">
   <thead>
     <tr>
-      <th>#</th>
-      <th >Nombre</th>
-      <th >Apellido</th>
-      <th >Dirección</th>
-      <th >Teléfono</th>
-      <th >Ciudad</th>
+      <th>Id</th>
+      <th>Nombre</th>
+      <th>Apellidos</th>
+      <th>Direccion</th>
+      <th>Telefono</th>
+      <th>Acciones</th>
     </tr>
   </thead>
   <tbody>
-    @foreach (var usuario in Model.Usuarios)
+     @foreach (var usuario in Model.Usuarios)
     {
         <tr>
             <td>@usuario.id</td>
@@ -23,13 +23,41 @@
             <td>@usuario.apellidos</td>
             <td>@usuario.direccion</td>
             <td>@usuario.telefono</td>
-            <td>@usuario.ciudad</td>
             <td>
-              <a class="btn btn-info" asp-page="./Details" asp-route-usuarioId="@usuario.id"><i class="fas fa-adjust"></i>Ver</a>
-              <a class="btn btn-info" asp-page="./Edit" asp-route-usuarioId="@usuario.id">Editar</a>
-              <a class="btn btn-danger" href="">Eliminar</a>
+              <div class="btn-group" role="group" aria-label="Basic example">
+               <a class="btn btn-info" asp-page="./Details" asp-route-usuarioId="@usuario.id"><i class="fas fa-adjust"></i>Ver</a>
+               <a class="btn btn-info" asp-page="./Edit" asp-route-usuarioId="@usuario.id">Editar</a>
+                
+                <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal_@usuario.id">
+                    Eliminar
+                  </button>
+
+                  <div class="modal fade" id="exampleModal_@usuario.id" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="exampleModalLabel">Eliminar Registro</h5>
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                          </button>
+                        </div>
+                        <div class="modal-body">
+                          ¿Esta seguro que desea eliminar el usuario: @usuario.nombre ?
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                        <form method="POST">
+                            <input type="number" class="form-control d-none" id="id" name="id" placeholder="id" asp-for="@usuario.id">
+                            <button type="submit"class="btn btn-danger" href="">Eliminar</button>
+                        </form>                         
+                       </div>
+                      </div>
+                    </div>
+                  </div>
+              </div>
             </td>
         </tr>
     }
+
   </tbody>
 </table>
