--- a/ProyectoCiclo3.App.Frontend/Pages/Index.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Index.cshtml
@@ -1,9 +1,10 @@
-﻿@page
+@page
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
 }
 
 <div class="text-center">
-    <img src="https://c.tenor.com/JDPHxCqgEd0AAAAC/amazon.gif" class="img-fluid rounded">
+    <h1 class="display-4">Welcome</h1>
+        <img src="https://c.tenor.com/JDPHxCqgEd0AAAAC/amazon.gif" class="img-fluid rounded">
 </div>
