--- a/ProyectoCiclo3.App.Frontend/Pages/Encomienda/List.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Encomienda/List.cshtml
@@ -2,15 +2,15 @@
 @model ProyectoCiclo3.App.Frontend.Pages.ListEncomiendaModel
 @{
 }
- 
+ <h1>Listado de Encomiendas</h1>
 <table class="table table-hover">
-  <thead class="bg-primary">
+  <thead>
     <tr>
-      <th>Id</th>
-      <th>Descripción</th>
-      <th>Peso</th>
-      <th>Tipo</th>
-      <th>Presentación</th>
+      <th  scope="col">Id</th>
+      <th  scope="col">Descripción</th>
+      <th  scope="col">Peso</th>
+      <th  scope="col">Tipo</th>
+      <th  scope="col">Presentación</th>
       <th>Acciones</th>
     </tr>
   </thead>
@@ -24,13 +24,14 @@
             <td>@encomienda.tipo</td>
             <td>@encomienda.presentacion</td>
             <td>
-              <div class="btn-group" role="group" aria-label="Basic example">
+              
                 <a class="btn btn-info" asp-page="./Details" asp-route-encomiendaId="@encomienda.id"><i class="fas fa-adjust"></i>Ver</a>
                 <a class="btn btn-info" asp-page="./Edit" asp-route-encomiendaId="@encomienda.id">Editar</a>
+                
                 <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal_@encomienda.id">
                     Eliminar
                   </button>
- 
+
                   <div class="modal fade" id="exampleModal_@encomienda.id" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                       <div class="modal-content">
@@ -53,10 +54,10 @@
                       </div>
                     </div>
                   </div>
-              </div>        
-          </td>
+                
+           
+            </td>
         </tr>
     }
-
   </tbody>
 </table>
