--- a/ProyectoCiclo3.App.Frontend/Pages/Shared/_Layout.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ENCO@HIGUERA</title>
+    <title>@ViewData["Title"] - Amazon</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">ENCO@HIGUERA</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">Amazon</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -24,8 +24,18 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Encomienda/List">Listar Encomiendas</a>
                         </li>
+                             <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Usuario/Create">Crear Usuarios</a>
+                        </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Usuario/Create">Crear Usuario</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Usuario/List">Listar Usuarios</a>
+                        </li>
+                             </li>
+                             <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Servicio/Create">Crear Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Servicio/List">Listar Servicios</a>
                         </li>
                     </ul>
                 </div>
@@ -40,7 +50,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - ENCO@HIGUERA - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2022 - Amazon - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
@@ -51,3 +61,4 @@
     @RenderSection("Scripts", required: false)
 </body>
 </html>
+
