--- a/ProyectoCiclo3.App.Frontend/Pages/Usuario/Edit.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Usuario/Edit.cshtml
@@ -4,17 +4,33 @@
     var usuario = Model.Usuario;
 }
  
-<div class = "text-center">
-<form method = "POST">
-  <input type="number" class="form-control d-none" id="id" name="id" placeholder="id" asp-for="@usuario.id" readonly>
-  <label for="nombre" class="form-label">nombre:</label>
-  <input type="text" class="form-control" id="nombre" name="nombre" placeholder="nombre" required minlength="4" asp-for="@usuario.nombre">
+<div class="text-center">
+<form method="POST">
+<label for="nombre" class="form-label">nombre:</label>
+   <input type="number" class="form-control d-none" id="id" name="id" placeholder="id" readonly asp-for="@usuario.id">
+  <input type="text" class="form-control" id="nombre" name="nombre" placeholder="nombre" required minlength="2" asp-for="@usuario.nombre">
   <label for="apellidos" class="form-label">apellidos:</label>
-  <input type="text" class="form-control" id="apellidos" name="apellidos" placeholder="apellidos" asp-for="@usuario.apellidos" required>
+  <input type="text" class="form-control" id="apellidos" name="apellidos" placeholder="apellidos" required minlength="2" asp-for="@usuario.apellidos">
   <label for="direccion" class="form-label">direccion:</label>
-  <input type="text" class="form-control" id="direccion" name="direccion" placeholder="Fecha" asp-for="@usuario.direccion" required>
-  <label for="telefono" class="form-label"> telefono:</label>
-  <input type="number" class="form-control" id="telefono" name="telefono" placeholder="telefono" asp-for="@usuario.telefono" required>
+  <input type="text" class="form-control" id="direccion" name="direccion" placeholder="direccion" required minlength="5" asp-for="@usuario.direccion">
+  <label for="telefono" class="form-label">telefono:</label>
+  <input type="text" class="form-control" id="telefono" name="telefono" placeholder="telefono" required minlength="7" asp-for="@usuario.telefono">
+  <label for="ciudad" class="form-label">ciudad:</label>
+  <select name="ciudad" id="ciudad" class="form-control" asp-validation-for="@usuario.ciudad">
+    <option value="Cartagena">Cartagena</option>
+    <option value="Medellin">Medellin</option>
+    <option value="Bogota">Bogota</option>
+    <option value="Pereira">Pereira</option>
+    <option value="Valledupar">Valledupar</option>
+    <option value="Monteria">Monteria</option>
+    <option value="Cali">Cali</option>
+    <option value="Armenia">Armenia</option>
+    <option value="Barranquilla">Barranquilla</option>
+    <option value="Pasto">Pasto</option>
+    <option value="Bucaramanga">Bucaramanga</option>
+    <option value="Manizales">Manizales</option>
+    <option value="Santa Marta">Santa Marta</option>
+  </select>
   <hr>
   <button type="submit" class="btn btn-success">Actualizar</button>
 </form>
