--- a/ProyectoCiclo3.App.Frontend/Pages/Shared/_Layout.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Shared/_Layout.cshtml
@@ -17,6 +17,13 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                    @Html.Partial("_LoginPartial")
+
+                    @using Microsoft.AspNetCore.Identity
+                    @inject SignInManager<IdentityUser> SignInManager
+                    @if (SignInManager.IsSignedIn(User))
+                    {
+
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Encomienda/Create">Crear Encomienda</a>
@@ -31,6 +38,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Servicio/Create">Crear Servicio</a>
                         </li>
                     </ul>
+                    }
                 </div>
             </div>
         </nav>
